exports[`test termRequest? 1`] = `
<div
  className="formInput">
  <label>
    What term do you want defined?
  </label>
   
  <div
    className=""
    data-react-toolbox="input">
    <input
      className=""
      defaultValue={undefined}
      disabled={false}
      maxLength={50}
      name="name"
      onChange={[Function]}
      onKeyPress={undefined}
      required={false}
      role="input"
      style={
        Object {
          "background": "transparent",
        }
      }
      type="Text"
      value="" />
    <span
      className={undefined} />
    <span
      className={undefined}
      hidden={undefined}>
      Your answer
    </span>
    <span
      className={undefined}>
      0
      /
      50
    </span>
  </div>
</div>
`;

exports[`test termRequest? 2`] = `
<div
  className="formInput">
  <label>
    What term do you want defined?
  </label>
   
  <span
    className="error">
    *
  </span>
  <div
    className=""
    data-react-toolbox="input">
    <input
      className=""
      defaultValue={undefined}
      disabled={false}
      maxLength={50}
      name="name"
      onChange={[Function]}
      onKeyPress={undefined}
      required={false}
      role="input"
      style={
        Object {
          "background": "transparent",
        }
      }
      type="Text"
      value="" />
    <span
      className={undefined} />
    <span
      className={undefined}
      hidden={undefined}>
      Your answer
    </span>
    <span
      className={undefined}>
      0
      /
      50
    </span>
  </div>
</div>
`;
